<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.t_rate.Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/header_sign_in"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/error"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:background="@color/colorPrimaryLight"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:background="@color/colorPrimaryLight"/>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:background="@color/button_bg"/>

        <TextView
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/sign_up"/>

    </LinearLayout>

</layout>